--- a/share/src/main/AndroidManifest.xml
+++ b/share/src/main/AndroidManifest.xml
@@ -49,6 +49,12 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:windowSoftInputMode="stateAlwaysHidden" />
+        
+         <activity-alias
+            android:name="${applicationId}.wxapi.WXEntryActivity"
+            android:exported="true"
+            android:targetActivity=".wxapi.WXEntryActivity" />
+        
     </application>
 
 </manifest>
