--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:${versions.support_library}"
-    implementation project(':share')
+     //implementation project(':share')
+    implementation 'com.github.woaigmz:OneKeyShare:1.0.0'
 }
